kubernetes-yaml-files/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-statefulset
spec:
  selector:
    matchLabels:
      app: dbserver
  serviceName: db-headless
  replicas: 1
  template:
    metadata:
      labels:
        app: dbserver
    spec:
      containers:
      - name: dbserver
        image: mongo
        ports:
        - containerPort: 27017
        resources:
          requests:
            memory: "250Mi"
            cpu: "200m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        volumeMounts:
        - name: mongodb-persistent-storage
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongodb-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
      storageClassName: local
