kubernetes-yaml-files/db-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-headless
  labels:
    app: dbserver
spec:
  clusterIP: None
  selector:
    app: dbserver
  ports:
  - port: 27017
    targetPort: 27017
