kubernetes-yaml-files/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: ClusterIP
  selector:
    app: flask-mongodb-app
  ports:
    - port: 80       # service port
      targetPort: 5000 # container port
